criação da interface home

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<script src="bower_components/angular/angular.min.js"></script>
     <title>Esqueleto</title>
 </head>
-<body ng-app="agere">
+<body ng-app="agere" style="background-color: #45818E;">
     <div class="container-fluid">
         <div ng-view="true"></div>
     </div>
@@ -33,6 +33,7 @@
 <script src="/scripts/controllers/homeController.js"></script>
 <script src="/scripts/controllers/loginController.js"></script>
 <script src="/scripts/controllers/entidadesController.js"></script>
+<script src="/scripts/controllers/relatorioController.js"></script>
 
 <!--DIRETIVAS-->
 <script src="scripts/directives/navbar.js"></script>
