--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<script src="bower_components/angular/angular.min.js"></script>
     <title>Esqueleto</title>
 </head>
-<body ng-app="agere" style="background-color: #45818E;">
+<body ng-app="agere" style="background-color: #90caf9; font-family: Gadugi">
     <div class="container-fluid">
         <div ng-view="true"></div>
     </div>
