--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 
 <!--DIRETIVAS-->
 <script src="scripts/directives/navbar.js"></script>
+<script src="scripts/directives/modalAdicionarUsuario.js"></script>
 
 <!--BOWER COMPONENTS-->
 <script src="bower_components/angular-animate/angular-animate.js"></script>
