--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,10 @@
 <!--DIRETIVAS-->
 <script src="scripts/directives/navbar.js"></script>
 <script src="scripts/directives/modalAdicionarUsuario.js"></script>
+<script src="scripts/directives/modalPerfilUsuario.js"></script>
 
 <!--BOWER COMPONENTS-->
+<script src='bower_components/ngMask/dist/ngMask.min.js'></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 </html>
