finalização do saida update e criação dos modais de erro

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE>
 <html>
 <head lang="pt">
+    <title> Controle de Horas</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="stylesheets/main.css">
 
     <script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular/angular.min.js"></script>
-    <title> Controle de Horas</title>
+    <!--ICONES-->
     <link rel="apple-touch-icon" sizes="57x57" href="/imagens/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/imagens/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/imagens/apple-icon-72x72.png">
@@ -33,29 +35,30 @@
 
 </body>
 
-<script src="/bower_components/jquery/dist/jquery.js"></script>
-<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="scripts/events/eventemitter2.js"></script>
 <script src="scripts/events/MensagemBrowser.js"></script>
-<script src="/scripts/events/SIOM.js"></script>
+<script src="scripts/events/SIOM.js"></script>
 
-<script src="/scripts/app.js"></script>
-<script src="/scripts/rotas.js"></script>
+<script src="scripts/app.js"></script>
+<script src="scripts/rotas.js"></script>
 
 <!--SERVICES AND CONTROLLER-->
-<script src="/scripts/services/userLogado.js"></script>
-<script src="/scripts/services/utilvalues.js"></script>
-<script src="/scripts/controllers/homeController.js"></script>
-<script src="/scripts/controllers/loginController.js"></script>
-<script src="/scripts/controllers/entidadesController.js"></script>
-<script src="/scripts/controllers/relatorioController.js"></script>
+<script src="scripts/services/userLogado.js"></script>
+<script src="scripts/services/utilvalues.js"></script>
+<script src="scripts/controllers/homeController.js"></script>
+<script src="scripts/controllers/loginController.js"></script>
+<script src="scripts/controllers/entidadesController.js"></script>
+<script src="scripts/controllers/relatorioController.js"></script>
 
 <!--DIRETIVAS-->
 <script src="scripts/directives/navbar.js"></script>
 <script src="scripts/directives/modalAdicionarUsuario.js"></script>
 <script src="scripts/directives/modalPerfilUsuario.js"></script>
+<script src="scripts/directives/modalHoraInvalida.js"></script>
 
 <!--BOWER COMPONENTS-->
 <script src='bower_components/ngMask/dist/ngMask.min.js'></script>
