Modais hora invalida e senha invalida adicionados e resolvido problema de horario maior.

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
 <script src="scripts/directives/modalAdicionarUsuario.js"></script>
 <script src="scripts/directives/modalPerfilUsuario.js"></script>
 <script src="scripts/directives/modalHoraInvalida.js"></script>
+<script src="scripts/directives/modalSenhaAtualizada.js"></script>
 
 <!--BOWER COMPONENTS-->
 <script src='bower_components/ngMask/dist/ngMask.min.js'></script>
