--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <meta name="msapplication-TileImage" content="/imagens/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 </head>
-<body ng-app="agere" style="background-color: #90caf9; font-family: Gadugi">
+<body ng-app="agere" style="font-family: Gadugi" background="/imagens/CDH.png" bgproperties="fixed">
     <div class="container-fluid">
         <div ng-view="true"></div>
     </div>
