--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,9 @@
 <script src="scripts/directives/modalPerfilUsuario.js"></script>
 <script src="scripts/directives/modalHoraInvalida.js"></script>
 <script src="scripts/directives/modalSenhaAtualizada.js"></script>
+<script src="scripts/directives/modalAlterarSenha.js"></script>
+<script src="scripts/directives/modalErroUm.js"></script>
+<script src="scripts/directives/modalErroDois.js"></script>
 
 <!--BOWER COMPONENTS-->
 <script src='bower_components/ngMask/dist/ngMask.min.js'></script>
