--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,9 @@
 <script src="scripts/directives/modalErroDois.js"></script>
 
 <!--BOWER COMPONENTS-->
-<script src='bower_components/ngMask/dist/ngMask.min.js'></script>
+<script src="bower_components/ngMask/dist/ngMask.min.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-md5/angular-md5.min.js"></script>
+
 </html>
