--- a/public/index.html
+++ b/public/index.html
@@ -69,5 +69,7 @@
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-md5/angular-md5.min.js"></script>
+<script src="bower_components/json-export-excel/dest/json-export-excel.js"></script>
+<script src="bower_components/file-saver/FileSaver.js"></script>
 
 </html>
